<package>
  <name>soem_beckhoff_drivers</name>
  <version>0.1.1</version>
  <description>
     soem_beckhoff_drivers contains drivers for the ethercat beckhoff modules to work together with the soem_master package, every module creates the necessary services, dataports and properties for its own functionality.
  </description>

  <maintainer email="ruben@intermodalics.eu"> Ruben Smits</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/soem_master</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>soem_master</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rtt_roscomm</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>soem</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  

</package>
