<package>
  <name>soem_master</name>
  <version>0.1.0</version>
  <description>
    soem_master contains a C++ wrapper around soem_core, a factory object to register and create drivers and a RTT component that will automatically create the drivers and their services for all the slave for which a driver is known.
  </description>

  <maintainer email="ruben@intermodalics.eu"> Ruben Smits</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/soem_master</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>soem</build_depend>
  <run_depend>rtt</run_depend>
  <run_depend>soem</run_depend>

</package>
